--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,14 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
+            "name": "Python: Streamlit",
+            "type": "python",
+            "request": "launch",
             "program": ".venv\\Scripts\\streamlit.exe",
             "console": "integratedTerminal",
             "args": [
